resources/style.css
html{
    font-size: 16px;
    font-family: 'Quicksand', sans-serif;
    scroll-behavior: smooth;
    
}

a:link {
    text-decoration: underline;
}
a:hover{
    color:grey;
}
h1{
    font-size: 5em;
}

h2{
    font-size: 2em;
    margin: 0.30em 0;
}
main h2 i{
    margin-right: 0.75em;
}
i{
    color: rgb(70, 70, 70);
}
h3{
    margin: 0.75em 0;
}
.dark_text,
.dark_text i{
    color: rgb(235, 235, 235);/* dark mode*/
}
.dark_text a:hover{
    color:rgb(56, 56, 56);/* dark mode*/
}

/* toggle button */
.toggle-mode{
    position: relative;
    display: flex;
    justify-content: flex-end;
    height: 2em;
}
.toggle-mode_dark{
    position: relative;
    display: flex;
    justify-content: flex-end;
    height: 2em;
    background-color: rgb(24, 24, 24);
}

/* Hides default checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.switch {
    position: relative;
    display: inline-block;
    margin: 0.75em 1em;
    width: 2.5em;
    height: 1em;   
}
.slider {  
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
  border-radius: 1em;
}
.slider:before {
    position: absolute;
    content: "";
    height: 0.60em;
    width: 0.60em;
    left: 4px;
    bottom: 3px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 1em;
  }
  input:checked + .slider {
    background-color: rgb(0, 180, 15);
  }
  
  input:focus + .slider {
    box-shadow: 0 0 0.5px rgb(0, 180, 15);
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(1.5em);
    -ms-transform: translateX(1.5em);
    transform: translateX(1.5em);
  }
    
.fractional-background{
    position: fixed;
    background-color: rgb(245, 245, 245);
    transform: rotate(25deg);
    min-height: 500em;
    max-height: 700em;
    min-width: 250em;
    max-width: 300em;
}
.fractional-background_dark{/* dark mode*/
    position: fixed;
    background-color: rgb(24, 24, 24);/* dark mode*/
    transform: rotate(25deg);
    min-height: 500em;
    max-height: 700em;
    min-width: 250em;
    max-width: 300em;
}
.layout-container{
    position: relative;
    min-height: 100vh;
    min-height: 100dvh;
    min-width: 50em;
    display: grid;
    grid-template-columns: 50em;
    grid-template-rows: 
        auto
        1fr
        5em;
    grid-template-areas: 
        "header"
        "main"
        "footer";
    justify-content: center;
    justify-items: center;
    row-gap: 1em;
    background: linear-gradient(140deg, rgba(2,0,36,0) 38%, rgb(0, 189, 255) 100%);
    color: rgb(35, 35, 35);
    z-index: 1;
}
.layout-container_dark{/* dark mode*/
    position: relative;
    min-height: 100vh;
    min-height: 100dvh;
    min-width: 50em;
    display: grid;
    grid-template-columns: 50em;
    grid-template-rows: 
        auto
        1fr
        5em;
    grid-template-areas: 
        "header"
        "main"
        "footer";
    justify-content: center;
    justify-items: center;
    row-gap: 1em;
    background: linear-gradient(140deg, rgb(24, 24, 24) 38%, rgba(0, 187, 255, 0.918) 100%);/* dark mode*/
    color: rgb(235, 235, 235); /* dark mode*/
}
header{
    grid-area: header;
    display: grid;
    justify-items: center;
    align-items: center;
    min-width: 100%;
}
/* Navigation */
nav{
    margin-top: 1em;
    display: grid;
    align-items: center;
    justify-items: center;
}
nav .navigation-items{
    margin: 0.25em;
    display: inline-flex;
}
nav .navigation-item a{
    text-decoration: none;
    color: rgb(35, 35, 35);
}

nav .navigation-item{
    margin: 0 0.75em;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;   
    text-align: center;
    padding: 0.5em 0.25em; 
    width: 5em;
    background: var(--background-color);
    z-index: 1;
    border-left: 3px solid var(--background-color);
    border-bottom: 4px solid var(--background-color);

    cursor: pointer;

    --background-color: rgb(247, 247, 247);
}

.button-on {
    border-left: 3px solid rgba(0, 187, 255, 0.342) !important;
    border-bottom: 4px solid rgba(0, 187, 255, 0.342) !important; 
}
.navigation-item::before{
    content: "";
    position: absolute;
    top: 0;
    left: -3px;
    right: 0;
    bottom: -4px;
    
    border-left: 3px solid rgba(0, 187, 255, 0.342);
    border-bottom: 4px solid rgba(0, 187, 255, 0.342);
    z-index: -1;
    transition: transform 0.15s ease-in-out;
    
    transform-origin: left;
    transform: scaleX(0);
}

.navigation-item:hover::before,
.navigation-item:focus::before,
.navigation-item:active::before{
    transform: scaleX(1);
    
}

nav .navigation-item_dark{/* dark mode*/
    margin: 0 0.75em;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;   
    text-align: center;
    padding: 0.5em 0.25em; 
    width: 5em;
    background: var(--background-color);
    z-index: 1;
    border-left: 3px solid var(--background-color);
    border-bottom: 4px solid var(--background-color);

    --background-color: rgb(44, 44, 44);/* dark mode*/
}
nav .navigation-item_dark a{/* dark mode*/
    text-decoration: none;
    color: rgb(235, 235, 235);/* dark mode*/
}
nav .navigation-item_dark a:hover{
    color: rgb(235, 235, 235);
}
.navigation-item_dark::before{/* dark mode*/
    content: "";
    position: absolute;
    top: 0;
    left: -3px;
    right: 0;
    bottom: -4px;
    
    border-left: 3px solid rgba(0, 187, 255, 0.342);
    border-bottom: 4px solid rgba(0, 187, 255, 0.342);
    z-index: -1;
    transition: transform 0.15s ease-in-out;
    
    transform-origin: left;
    transform: scaleX(0);
}

.navigation-item_dark:hover::before,
.navigation-item_dark:focus::before,
.navigation-item_dark:active::before{/* dark mode*/
    transform: scaleX(1);
    
}

.show {
    display: block !important;
}
/* Main content*/
main{
    grid-area: main;
    
}

.about-me-container{
    display: grid;
    min-width: 55em;
    grid-template-columns: 1fr 1fr;
    justify-items: flex-end;
    align-items: end;   
}
.about-me-text-container{
    background-color:  rgba(115, 222, 255, 0.205);
    border-radius: 2em;
    margin-top: 1em;
    min-height: 23em;
}
.about-me-text-container, .contact-container p{
    line-height: normal;
    padding: 0.75em;
}
.contact{
    display: none;
    position: fixed;
    min-width: 300px;
    width: 40em;
    max-width: 500px;
    background-color: rgb(115, 222, 255);
    box-shadow: 30px 30px 60px rgba(0, 120, 156, 0.514);
    padding-top: 0.25em;
    padding-left: 0.75em;
    padding-bottom: 0.25em;
    border-radius: 2em;
}
.contact_dark{
    display: none;
    position: fixed;
    min-width: 300px;
    width: 40em;
    max-width: 500px;
    background-color: rgb(24, 24, 24);
    box-shadow: 30px 30px 60px rgba(0, 120, 156, 0.514);
    padding: 0.25em;
    color: #ccc;
    padding-top: 0.25em;
    padding-left: 0.75em;
    padding-bottom: 0.25em;
    border-radius: 2em;
}
.contact_dark a{/* dark mode*/
        color: rgb(235, 235, 235);/* dark mode*/
    }

.contact-container{
    display: flex;
    flex-direction: column;

}
.so-me-container{
    display: flex;
    flex-direction: column;
}
.so-me{
    font-size: 2em;
    margin: 0.25em;
    padding-left: 10%;
}
.so-me a{
    text-decoration: none;
}
.so-me i{
    margin-right: 0.5em;
}
.about-me-img-container img{
    width: 20em;
    border: 2em solid rgba(0, 187, 255, 0.199);
    border-radius: 15em;
}
.projects-container{
    margin-top: 1em;
    padding-top: 0.25em;
    padding-left: 0.75em;
    margin-left: 20%;
    background-color:  rgba(115, 222, 255, 0.205);
    border-radius: 2em;
}
.project-title{
    padding: 0.25em;
}
.project-title h3{
    display: inline;
    font-size: 1.25em;  
}
.projects-container details{
    padding-top: 0.55em;
    padding-bottom: 0.75em;
}
details > summary{
    list-style-type: none;
    cursor: pointer;
}
details > summary::before {
    content: "+";
    font-size: 1.25em;
}
details[open] > summary::before {
    content: "-";
    font-size: 1.25em;
}
.projects-container img {
    width: 90%;
    max-width: 400px;
    margin: 0.50em 0;
}
.skills-container{
    margin-top: 1em;
    background-color:  rgba(115, 222, 255, 0.205);
    padding: 0.75em;
    border-radius: 2em;
}
.skill-img-container{
    display: flex;
    width: 100%;
    justify-content: space-between;
    flex-wrap: wrap;
    font-size: 4em;
    color: rgb(70, 70, 70);
    padding-top: 0.25em;
    
}

/* Footer */
footer{
    grid-area: footer;
    display: grid;
    align-items: center;
    justify-items: center;
    min-width: 100%;
    min-height: 100%;
    margin-bottom: 1em;
    place-self: center;   
}

.heart{
    color: red;
}

@media only screen and (max-width: 2100px) {
    .fractional-background{
        min-height: 400em;
        max-height: 500em;
        min-width: 250em;
        max-width: 300em;
    }
    .fractional-background_dark{ /* dark mode */
        min-height: 400em;
        max-height: 500em;
        min-width: 250em;
        max-width: 300em;
    }
}
@media only screen and (max-width: 1200px) {
    .fractional-background{
        min-height: 300em;
        max-height: 400em;
        min-width: 250em;
        max-width: 200em;
    }
    .fractional-background_dark{ /* dark mode */
        min-height: 300em;
        max-height: 400em;
        min-width: 250em;
        max-width: 200em;
    }
}
@media only screen and (max-width: 820px) {
    .fractional-background{
        min-height: 220em;
        max-height: 370em;
        min-width: 250em;
        max-width: 200em;
    }
    .layout-container{
        max-width: 820px;
        min-width: 350px;
        min-height: 100vh;
        display: flex;
        flex-direction: column;
        padding: 0.25em;
        justify-content: flex-start;       
    }
    .fractional-background_dark{ /* dark mode */
        min-height: 220em;
        max-height: 370em;
        min-width: 250em;
        max-width: 200em;
    }
    .layout-container_dark{ /* dark mode */
        max-width: 820px;
        min-width: 350px;
        min-height: 100vh;
        display: flex;
        flex-direction: column;
        padding: 0.25em;
        justify-content: flex-start;       
    }
    header{
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    nav .navigation-items{
        margin: 0;
    }
    main{
        display: flex;
        flex: 1;    
        flex-direction: column; 
    }
    .contact{
        display: flex;
        align-self: center;
        position: relative;
        min-width: 310px;
        max-width: 340px; 

    }
    .contact_dark{
        display: flex;
        align-self: center;
        position: relative;
        min-width: 310px;
        max-width: 340px; 
    }
    .logo-container h1{
        text-align: center;
        }
    .about-me-container{
        display: flex;
        flex-flow: column-reverse;
        max-width: 768px;
        min-width: 350px;
        align-items: center;
        justify-content: center;
    }
    .about-me-text-container{
        min-height: 0;
    }
    .about-me-img-container{
        display: flex;     
        justify-content: center;
    }
    .about-me-img-container img{
        width: 35%;
        border: 1em solid rgba(0, 187, 255, 0.199);
    }
    .projects-container{
        padding-top: 0.25em;
        padding-left: 0.75em;
        margin-left: 0;
    }
    .skill-img-container{
        display: flex;
        flex-direction: row;
        align-items: center;
        flex-wrap: wrap;        
    }
    .skills-container i {
        font-size: 0.75em;
        padding: 0.35em 0.35em;
    }
    .so-me{
        font-size: 1.5em;
        margin: 0.25em;
        padding-left: 0;
    }
    footer{
        display: flex;
        justify-content: center; 
        align-items: flex-end;
        height: 2em;
    }
}

